fix : NotificationSender jpa 세션 이슈 해결
(cherry picked from commit 02b155ff180356de3778191139b2d8f8684bb855)